--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: thayna
+  username: postgres
   password: prav@211
   timeout: 5000
 
